--- a/src/assets/styles/layouts/index.css
+++ b/src/assets/styles/layouts/index.css
@@ -140,3 +140,87 @@
 .af-skills__item-inner {
     @apply flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300;
 }
+
+.af-resume-button {
+    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
+    @apply hover:text-teal-300 focus-visible:text-teal-300 font-semibold text-slate-200 text-base;
+}
+
+.af-resume-icon {
+    @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
+    @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+}
+
+/*projects*/
+.af-project {
+    @apply relative grid gap-4 pb-1 transition-all sm:grid-cols-8;
+    @apply sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50;
+}
+
+.af-project__ext {
+    @apply absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition;
+    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50;
+    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg;
+}
+
+.af-project__inner {
+    @apply z-10 sm:order-2 sm:col-span-6;
+}
+
+.af-project__link {
+    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
+    @apply hover:text-teal-300 focus-visible:text-teal-300 text-base
+}
+
+.af-project__icon {
+    @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
+    @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+}
+
+.af-project__desc {
+    @apply mt-2 text-sm leading-normal;
+}
+
+.af-project__img {
+    @apply rounded border-2 border-slate-200/10 transition;
+    @apply group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1;
+    @apply !h-auto aspect-[16/12] object-cover object-left-top;
+}
+
+/*Writing*/
+.af-writing {
+    @apply relative grid gap-4 pb-1 transition-all sm:grid-cols-8;
+    @apply sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50;
+}
+
+.af-writing__ext {
+    @apply absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition;
+    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50;
+    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg;
+}
+
+.af-writing__inner {
+    @apply z-10 col-span-6;
+}
+
+.af-writing__link {
+    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
+    @apply hover:text-teal-300 focus-visible:text-teal-300 text-base;
+}
+
+.af-writing__icon {
+    @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
+    @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+}
+
+.af-writing__desc {
+    @apply mt-2 text-sm leading-normal;
+}
+
+.af-writing__img {
+    @apply z-10 col-span-2 rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:col-span-2;
+    @apply !h-auto aspect-[16/8] object-cover object-left-top;
+}
