--- a/src/assets/styles/layouts/index.css
+++ b/src/assets/styles/layouts/index.css
@@ -1,7 +1,10 @@
 /*@import 'auth.css';*/
-
 .af-main {
     @apply w-full h-full min-h-screen;
+}
+
+.focus {
+    @apply transition-all;
 }
 
 .af-main__inner {
@@ -10,19 +13,19 @@
 }
 
 .af-sidebar {
-    @apply lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24;
+    @apply lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between pt-10 lg:!py-24;
 }
 
 .af-sidebar__title {
-    @apply text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl;
+    @apply text-4xl font-bold tracking-tight text-white sm:text-5xl;
 }
 
 .af-sidebar__subtitle {
-    @apply mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl;
+    @apply mt-3 text-lg font-medium tracking-tight text-white sm:text-xl;
 }
 
 .af-sidebar__desc {
-    @apply mt-4 max-w-xs leading-normal;
+    @apply mt-4 max-w-xs leading-normal text-gray-400;
 }
 
 /*nav*/
@@ -39,22 +42,22 @@
 }
 
 .af-nav__menu-indicator {
-    @apply mr-4 h-px w-8 bg-slate-600 transition-all;
-    @apply group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16;
-    @apply group-focus-visible:bg-slate-200 motion-reduce:transition-none;
+    @apply mr-4 h-px w-8 bg-primary-600 transition-all;
+    @apply group-hover:w-16 group-hover:bg-secondary-300 group-focus-visible:w-16;
+    @apply group-focus-visible:bg-secondary-300 motion-reduce:transition-none;
 }
 
 .af-nav__menu-text {
-    @apply text-xs font-bold uppercase tracking-widest text-slate-500;
-    @apply group-hover:text-slate-200 group-focus-visible:text-slate-200;
+    @apply text-xs font-bold uppercase tracking-widest text-primary-500;
+    @apply group-hover:text-secondary-300 group-focus-visible:text-secondary-300;
 }
 
 .active .af-nav__menu-indicator {
-    @apply w-16 bg-slate-200 motion-reduce:transition-none;
+    @apply w-16 bg-secondary-300 motion-reduce:transition-none;
 }
 
 .active .af-nav__menu-text {
-    @apply text-slate-200;
+    @apply text-secondary-300;
 }
 
 .af-social {
@@ -66,7 +69,7 @@
 }
 
 .af-social__link {
-    @apply block hover:text-slate-200;
+    @apply block text-gray-400 hover:text-secondary-300 transition-all;
 }
 
 /*inner*/
@@ -79,13 +82,13 @@
 }
 
 .af-section__head {
-    @apply sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75;
+    @apply sticky top-0 z-20 -mx-6 mb-4 w-screen bg-primary-900/20;
     @apply px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative;
     @apply lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0;
 }
 
 .af-section__head-title {
-    @apply text-sm font-bold uppercase tracking-widest text-slate-200 lg:sr-only;
+    @apply text-sm font-bold uppercase tracking-widest text-orange-400 lg:sr-only;
 }
 
 /*experience*/
@@ -96,12 +99,12 @@
 
 .af-exp__ext {
     @apply absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition;
-    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50;
-    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg
+    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-primary-600/20;
+    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(55,31,24,0.1)] lg:group-hover:drop-shadow-lg
 }
 
 .af-exp__head {
-    @apply z-10 mb-2 mt-1 text-xs font-semibold uppercase tracking-wide text-slate-500 sm:col-span-2;
+    @apply z-10 mb-2 mt-1 text-xs font-semibold uppercase tracking-wide text-primary-500 sm:col-span-2;
 }
 
 .af-exp__inner {
@@ -109,18 +112,18 @@
 }
 
 .af-exp__link {
-    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
-    @apply hover:text-teal-300 focus-visible:text-teal-300 text-base;
+    @apply inline-flex items-baseline font-medium leading-tight text-white;
+    @apply hover:text-secondary-300 focus-visible:text-secondary-300 text-base;
 }
 
 .af-exp__icon {
     @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
     @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
-    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px mb-1;
 }
 
 .af-exp__designation {
-    @apply text-slate-500;
+    @apply text-primary-500;
 }
 
 .af-exp__desc {
@@ -138,12 +141,16 @@
 }
 
 .af-skills__item-inner {
-    @apply flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300;
+    @apply flex items-center rounded-full px-3 py-1 text-xs font-medium leading-5 bg-secondary-300/10 text-secondary-300;
+}
+
+.ext .af-skills__item-inner {
+    @apply bg-secondary-200/10 text-secondary-200;
 }
 
 .af-resume-button {
-    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
-    @apply hover:text-teal-300 focus-visible:text-teal-300 font-semibold text-slate-200 text-base;
+    @apply inline-flex items-baseline leading-tight text-gray-400;
+    @apply hover:text-orange-300 focus-visible:text-orange-300 font-semibold text-base;
 }
 
 .af-resume-icon {
@@ -160,8 +167,8 @@
 
 .af-project__ext {
     @apply absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition;
-    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50;
-    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg;
+    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-primary-600/20;
+    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(55,31,24,0.1)] lg:group-hover:drop-shadow-lg
 }
 
 .af-project__inner {
@@ -169,14 +176,14 @@
 }
 
 .af-project__link {
-    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
-    @apply hover:text-teal-300 focus-visible:text-teal-300 text-base
+    @apply inline-flex items-baseline font-medium leading-tight text-white;
+    @apply hover:text-secondary-300 focus-visible:text-secondary-300 text-base;
 }
 
 .af-project__icon {
     @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
     @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
-    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px mb-1;
 }
 
 .af-project__desc {
@@ -184,7 +191,7 @@
 }
 
 .af-project__img {
-    @apply rounded border-2 border-slate-200/10 transition;
+    @apply rounded border-2 border-primary-200/10 transition;
     @apply group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1;
     @apply !h-auto aspect-[16/12] object-cover object-left-top;
 }
@@ -197,8 +204,8 @@
 
 .af-writing__ext {
     @apply absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition;
-    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50;
-    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg;
+    @apply motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-primary-600/20;
+    @apply lg:group-hover:shadow-[inset_0_1px_0_0_rgba(55,31,24,0.1)] lg:group-hover:drop-shadow-lg
 }
 
 .af-writing__inner {
@@ -206,14 +213,14 @@
 }
 
 .af-writing__link {
-    @apply inline-flex items-baseline font-medium leading-tight text-slate-200;
-    @apply hover:text-teal-300 focus-visible:text-teal-300 text-base;
+    @apply inline-flex items-baseline font-medium leading-tight text-white;
+    @apply hover:text-secondary-300 focus-visible:text-secondary-300 text-base;
 }
 
 .af-writing__icon {
     @apply inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1;
     @apply group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1;
-    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px;
+    @apply group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px mb-1;
 }
 
 .af-writing__desc {
@@ -221,6 +228,6 @@
 }
 
 .af-writing__img {
-    @apply z-10 col-span-2 rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:col-span-2;
+    @apply z-10 col-span-2 rounded border-2 border-primary-200/10 transition group-hover:border-primary-200/30 sm:col-span-2;
     @apply !h-auto aspect-[16/8] object-cover object-left-top;
 }
