--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-/*@import "layouts";*/
+@import "layouts";
 @import "modules";
 
 @tailwind base;
@@ -14,7 +15,7 @@
     }
 
     body {
-        @apply transition-all bg-zinc-900;
+        @apply transition-all bg-primary-900;
         @apply font-Inter text-gray-400 font-light;
     }
 
